Get rid of Guava